# deep-cds

./: .gitignore  LICENSE  README.md  environment.yml  predict.py  predict_with_deepcds.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.fasta
.github/workflows/: linting.yaml  tests.yaml
configs/deepcds/: hyperparameters.yaml
configs/deepcds_S/: hyperparameters.yaml
configs/deepcds_SI/: hyperparameters.yaml
configs/indel_substitution/: label_mapping.pkl
configs/model_with_errors/: hyperparameters.yaml  hyperparameters_plm.yaml
configs/model_with_substitution_errors/: hyperparameters_plm.yaml
configs/model_without_errors/: hyperparameters_plm.yaml  label_mapping.pkl
configs/none/: hyperparameters.yaml
configs/substitution/: hyperparameters.yaml
data_example/: GCF_000007365.1_test.fasta  GCF_000007365.1_test_deepcds_predictions.gff  GCF_000007365.1_test_small.fasta  test.fasta
output_example/: test_deepcds_predictions.faa  test_deepcds_predictions.fna  test_deepcds_predictions.gff
src/: __init__.py  deepcds_dataset.py  deepcds_model.py  postprocessing.py
src_dev/: __init__.py
src_dev/data_analysis/: check_testset_error_distributions.py  generate_taxonomical_tree.ipynb  generate_taxonomical_tree.py  get_testset_statistics.ipynb  plot_cds_lengths.ipynb  plot_genome_statistics.ipynb  plot_genome_statistics.py
src_dev/data_preprocessing/: apply_ancient_damage.py  check_testsets.py  collect_genomic_information.py  count_reads.py  extract_smaller_training_sets.py  get_label_encodings.ipynb  simulate_reads.py  (+12 more)
tests/: test_predict.py
(+156 files in other folders)
