[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-cds"
version = "0.1.0"
authors = [{name = "EM", email = "me@em.com"}]
description = "Something cool here."
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["I", "N", "E"]
#select = ["I", "N", "E", "W", ]

####MODIFY EVERYTHING!
#Read this docs: https://packaging.python.org/en/latest/specifications/pyproject-toml/#declaring-project-metadata
