[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-cds"
version = "1.0.0"
authors = [{name = "Line Sandvad Nielsen", email = "line.s.nielsen@bio.ku.dk"}]
description = "DeepCDS predictor for predicting CDS sequences from short reads"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["I", "N", "E"]

#Read this docs: https://packaging.python.org/en/latest/specifications/pyproject-toml/#declaring-project-metadata
